# community-organizer

./: .gitignore  .pii-review  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  template.yaml
.githooks/: commit-msg
docs/: ARCHITECTURE.md  CHANGELOG.md  DEPENDENCIES.md  DEPLOYMENT.md  PRIVACY.md  SECURITY.md
src/: requirements.in  requirements.txt
src/community_organizer/: __init__.py  auth.py  cli.py  help-admin.md  help-member.md
src/community_organizer/core/: __init__.py  db.py  ical.py  models.py  publishing.py  recurrence.py  schedule_email.py  standing.py  (+1 more)
tests/: conftest.py  test_auth.py  test_cli_bootstrap.py
tests/core/: test_db.py  test_db_blocked_dates.py  test_db_confirmation.py  test_db_event_apps.py  test_ical.py  test_pluralize.py  test_publishing_flow.py  test_publishing_pure.py  test_recurrence.py  test_schedule_email.py  test_scheduling.py  test_standing.py  test_standing_reminders.py
tests/lambdas/: test_app_sharing.py  test_apple_signin.py  test_bounce.py  test_ca_user_edit_no_app.py  test_event_app_surface.py  test_flexible_event.py  test_household_visibility.py  test_households.py  test_inbound_accepted.py  test_inbound_caps.py  test_inbound_community_urls.py  test_inbound_forward.py  test_notifier_community_url.py  test_notifier_sms.py  test_og.py  test_perf_instrumentation.py  test_poll_reply_nudge.py  test_sandbox.py  test_schedules_page_parallel.py  test_send_email.py  test_settings_contact.py  test_standing_occurrence.py  test_standing_setup.py  test_wall_calendar.py  test_web_auth.py
tests/providers/: test_sms.py
(+8 files in other folders)
